--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="classes\blackjack\PropertyChange.cs" />
+    <Compile Include="classes\blackjack\Token.cs" />
     <Compile Include="classes\Main\Card.cs" />
     <Compile Include="classes\Main\Database.cs" />
     <Compile Include="classes\Main\User.cs" />
