Function buttons af

--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -61,11 +61,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="classes\blackjack\BlackjackDeck.cs" />
+    <Compile Include="classes\blackjack\Computers.cs" />
     <Compile Include="classes\Main\CardDeck.cs" />
-    <Compile Include="classes\blackjack\Dubbel.cs" />
-    <Compile Include="classes\blackjack\CardDeck.cs" />
     <Compile Include="classes\blackjack\PropertyChange.cs" />
-    <Compile Include="classes\blackjack\Token.cs" />
+    <Compile Include="classes\blackjack\BlackJack.cs" />
     <Compile Include="classes\Main\Card.cs" />
     <Compile Include="classes\Main\Database.cs" />
     <Compile Include="classes\Main\User.cs" />
