--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="classes\blackjack\BlackjackDeck.cs" />
+    <Compile Include="classes\blackjack\BlackjackPlayer.cs" />
     <Compile Include="classes\blackjack\Computers.cs" />
     <Compile Include="classes\Main\CardDeck.cs" />
     <Compile Include="classes\blackjack\PropertyChange.cs" />
