--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -85,6 +85,7 @@
     <Compile Include="enums\card\CardBackColor.cs" />
     <Compile Include="enums\card\CardType.cs" />
     <Compile Include="enums\card\CardValue.cs" />
+    <Compile Include="enums\poker\PokerButton.cs" />
     <Compile Include="enums\poker\PokerHand.cs" />
     <Compile Include="Views\blackjack\BlackjackWindow.xaml.cs">
       <DependentUpon>BlackjackWindow.xaml</DependentUpon>
