--- a/StonksCasino/StonksCasino/App.config
+++ b/StonksCasino/StonksCasino/App.config
@@ -16,6 +16,9 @@
             <setting name="Password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Timestamp" serializeAs="String">
+                <value>0</value>
+            </setting>
         </StonksCasino.Properties.Settings>
     </userSettings>
 </configuration>
