--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -90,6 +90,7 @@
     <Compile Include="classes\Main\CardDeckBlack.cs" />
     <Compile Include="classes\Main\Database.cs" />
     <Compile Include="classes\Main\User.cs" />
+    <Compile Include="classes\poker\CardPair.cs" />
     <Compile Include="classes\poker\PokerDeck.cs" />
     <Compile Include="classes\poker\PokerGame.cs" />
     <Compile Include="classes\poker\PokerHandCalculator.cs" />
