--- a/StonksCasino/StonksCasino/StonksCasino.csproj
+++ b/StonksCasino/StonksCasino/StonksCasino.csproj
@@ -71,6 +71,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="XamlAnimatedGif, Version=2.0.0.0, Culture=neutral, PublicKeyToken=20a987d8023d9690, processorArchitecture=MSIL">
+      <HintPath>..\packages\XamlAnimatedGif.2.0.0\lib\net45\XamlAnimatedGif.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -82,6 +85,7 @@
     <Compile Include="classes\blackjack\BlackjackDeckComputer.cs" />
     <Compile Include="classes\blackjack\BlackjackPlayer.cs" />
     <Compile Include="classes\blackjack\Computers.cs" />
+    <Compile Include="classes\HorseRace\HorseGame.cs" />
     <Compile Include="classes\Main\CardBlackjack.cs" />
     <Compile Include="classes\Main\CardDeck.cs" />
     <Compile Include="classes\blackjack\PropertyChange.cs" />
@@ -107,6 +111,12 @@
     <Compile Include="enums\poker\PokerHand.cs" />
     <Compile Include="Views\blackjack\BlackjackWindow.xaml.cs">
       <DependentUpon>BlackjackWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\horserace\HorseRace.xaml.cs">
+      <DependentUpon>HorseRace.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\horserace\horseracewindow.xaml.cs">
+      <DependentUpon>horseracewindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\main\LibraryWindow.xaml.cs">
       <DependentUpon>LibraryWindow.xaml</DependentUpon>
@@ -136,6 +146,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\blackjack\BlackjackWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\horserace\HorseRace.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\horserace\horseracewindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -295,7 +313,9 @@
     <Resource Include="Img\PokerButtons\Dealer.png" />
     <Resource Include="Img\PokerButtons\SmallBlind.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Img\HorseRace\Horse.gif" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Img\Slotmachine\Bal.png" />
     <Resource Include="Img\Slotmachine\Bar.png" />
@@ -308,6 +328,9 @@
     <Resource Include="Img\Slotmachine\Orange.png" />
     <Resource Include="Img\Slotmachine\Seven.png" />
     <Resource Include="Img\Slotmachine\Star.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\HorseRace\Finishline.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
