--- a/StonksCasino/StonksCasino/packages.config
+++ b/StonksCasino/StonksCasino/packages.config
@@ -7,4 +7,5 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="XamlAnimatedGif" version="2.0.0" targetFramework="net472" />
 </packages>
